<resources>
    <string name="app_name">IAM</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_login_text">LOGIN</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_forgot">forgot id/pw</string>
    <string name="action_login">LOG IN</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_email">Email</string>
</resources>